--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.4",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
