--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && serverless offline",
-    "clean": "rimraf build"
+    "clean": "rimraf build",
+    "format": "prettier . --write",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "start": "tsc && serverless offline"
   },
   "keywords": [
     "serverless",
@@ -29,12 +32,24 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.2",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
     "rimraf": "^5.0.5",
     "serverless": "^3.37.0",
     "serverless-dotenv-plugin": "^6.0.0",
     "serverless-dynamodb": "^0.2.47",
     "serverless-offline": "^13.3.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "typescript": "~5.2.2"
+  },
+  "lint-staged": {
+    "*.ts": "npm run lint:fix",
+    "*.{js,css,md,ts}": "npm run format"
   }
 }
