--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "format": "prettier . --write",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
+    "prepare": "husky install",
     "start": "tsc && serverless offline"
   },
   "keywords": [
