--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-dynamodb": "^3.454.0",
     "@aws-sdk/credential-providers": "^3.454.0",
     "@aws-sdk/lib-dynamodb": "^3.454.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.10.4",
