--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "prepare": "husky install",
-    "start": "tsc && serverless offline"
+    "setup": "sls dynamodb install",
+    "start": "tsc && serverless offline start"
   },
   "keywords": [
     "serverless",
