--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "dependencies": {
     "@aws-lambda-powertools/commons": "^1.17.0",
-    "@aws-lambda-powertools/tracer": "^1.17.0",
+    "@aws-lambda-powertools/logger": "^1.17.0",
     "@aws-sdk/client-dynamodb": "^3.490.0",
     "@aws-sdk/credential-providers": "^3.490.0",
     "@aws-sdk/lib-dynamodb": "^3.490.0",
@@ -35,6 +35,7 @@
     "typedi": "^0.10.0"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.131",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
