--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "format": "prettier . --write",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "prepare": "husky install",
     "setup": "sls dynamodb install",
-    "start": "node compile-service.js && serverless offline start",
-    "package": "node compile-service.js && zip lambda.zip dist/lambda.js && mkdir -p artifacts && mv lambda.zip artifacts/lambda.zip"
+    "start": "ts-node compile-service.ts && serverless offline start",
+    "package": "ts-node compile-service.ts && zip lambda.zip dist/lambda.js && mkdir -p artifacts && mv lambda.zip artifacts/lambda.zip"
   },
   "keywords": [
     "serverless",
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.131",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
@@ -46,12 +49,14 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
     "rimraf": "^5.0.5",
     "serverless": "^3.38.0",
     "serverless-dotenv-plugin": "^6.0.0",
     "serverless-dynamodb": "^0.2.47",
     "serverless-offline": "^13.3.2",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
