--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@aws-sdk/lib-dynamodb": "^3.490.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "joi": "^17.12.0",
     "reflect-metadata": "^0.2.1",
     "routing-controllers": "^0.10.4",
     "serverless-http": "^3.2.0",
