--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   "dependencies": {
     "@aws-lambda-powertools/commons": "^1.17.0",
     "@aws-lambda-powertools/logger": "^1.17.0",
-    "@aws-sdk/lib-dynamodb": "^3.490.0",
-    "@dvsa/cvs-microservice-common": "^0.0.9",
+    "@dvsa/cvs-microservice-common": "^0.0.7",
+    "axios": "^1.6.7",
+    "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.12.0",
@@ -56,7 +57,6 @@
     "rimraf": "^5.0.5",
     "serverless": "^3.38.0",
     "serverless-dotenv-plugin": "^6.0.0",
-    "serverless-dynamodb": "^0.2.47",
     "serverless-offline": "^13.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
