--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@aws-sdk/client-dynamodb": "^3.490.0",
     "@aws-sdk/credential-providers": "^3.490.0",
     "@aws-sdk/lib-dynamodb": "^3.490.0",
+    "@dvsa/cvs-microservice-common": "^0.0.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.12.0",
