--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.12.0",
+    "mysql2": "^3.9.1",
     "reflect-metadata": "^0.2.1",
     "routing-controllers": "^0.10.4",
     "serverless-http": "^3.2.0",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.131",
