--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "test:coverage": "jest --coverage",
     "prepare": "husky install",
     "setup": "sls dynamodb install",
-    "build": "ts-node compile-service.ts",
+    "build": "npm run clean && ts-node compile-service.ts",
     "start": "npm run build -- --source-map && serverless offline start",
-    "package": "npm run build && zip lambda.zip dist/lambda.js && mkdir -p artifacts && mv lambda.zip artifacts/lambda.zip"
+    "package": "npm run build && zip -r lambda.zip dist/* && mkdir -p artifacts && mv lambda.zip artifacts/lambda.zip"
   },
   "keywords": [
     "serverless",
@@ -29,23 +29,27 @@
     "@aws-lambda-powertools/logger": "^1.17.0",
     "@aws-sdk/lib-dynamodb": "^3.490.0",
     "@dvsa/cvs-microservice-common": "^0.0.9",
+    "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.12.0",
+    "mybatis-mapper": "matthew2564/mybatis-mapper#fix/function-scoping",
     "mysql2": "^3.9.1",
     "reflect-metadata": "^0.2.1",
     "routing-controllers": "^0.10.4",
     "serverless-http": "^3.2.0",
-    "typedi": "^0.10.0",
-    "typeorm": "^0.3.20"
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.131",
+    "@types/copyfiles": "^2.4.4",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.0",
+    "@types/source-map-support": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "copyfiles": "^2.4.1",
     "esbuild": "^0.19.11",
     "esbuild-plugin-typescript-decorators": "^0.1.0",
     "eslint": "^8.56.0",
@@ -58,7 +62,6 @@
     "rimraf": "^5.0.5",
     "serverless": "^3.38.0",
     "serverless-dotenv-plugin": "^6.0.0",
-    "serverless-dynamodb": "^0.2.47",
     "serverless-offline": "^13.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
