--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.12.0",
-    "mybatis-mapper": "matthew2564/mybatis-mapper#fix/function-scoping",
+    "mybatis-mapper": "matthew2564/mybatis-mapper#feat/add-equalsIgnoreCase-replacer",
     "mysql2": "^3.9.1",
     "reflect-metadata": "^0.2.1",
     "routing-controllers": "^0.10.4",
