--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.12.0",
+    "lodash": "^4.17.21",
     "mybatis-mapper": "matthew2564/mybatis-mapper#feat/session-creation",
     "mysql2": "^3.9.1",
     "reflect-metadata": "^0.2.1",
@@ -45,6 +46,7 @@
     "@types/copyfiles": "^2.4.4",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.0",
     "@types/source-map-support": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
