--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Serverless Sub Routing with DI",
   "main": "./src/index.ts",
   "author": "matthew2564",
+  "friendlyName": "Serverless Sub Routing",
   "license": "ISC",
   "scripts": {
     "clean": "rimraf artifacts build dist",
@@ -28,10 +29,9 @@
     "@aws-lambda-powertools/commons": "^1.17.0",
     "@aws-lambda-powertools/logger": "^1.17.0",
     "@aws-sdk/lib-dynamodb": "^3.490.0",
-    "@dvsa/cvs-microservice-common": "^0.0.9",
+    "@dvsa/cvs-microservice-common": "^0.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "joi": "^17.12.0",
     "reflect-metadata": "^0.2.1",
     "routing-controllers": "^0.10.4",
     "serverless-http": "^3.2.0",
