--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.2",
     "reflect-metadata": "^0.2.1",
     "routing-controllers": "^0.10.4",
+    "routing-controllers-openapi": "^4.0.0",
     "serverless-http": "^3.2.0",
     "typedi": "^0.10.0"
   },
@@ -60,7 +61,8 @@
     "serverless-offline": "^13.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "typescript-json-schema": "^0.63.0"
   },
   "lint-staged": {
     "*.ts": "npm run lint:fix",
