--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,13 @@
     "target": "es2022",
     "module": "commonjs",
     "rootDir": "./",
+    "outDir": "dist",
+    "sourceMap": true,
     "strict": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src/**/*"
