Open API integration; Debugger support

--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "serverless-sub-routing",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Serverless Sub Routing with DI",
-  "main": "./src/index.ts",
+  "main": "src/index.ts",
   "author": "matthew2564",
   "friendlyName": "Serverless Sub Routing",
   "license": "ISC",
   "scripts": {
+    "build": "npm run clean && ts-node compile-service.ts",
     "clean": "rimraf artifacts build dist",
     "format": "prettier . --write",
+    "generate-openapi-spec": "ts-node documentation/generate-openapi-spec.ts",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
+    "package": "npm run build && mv dist/src/** dist/ && zip lambda.zip dist/index.js && mkdir -p artifacts && mv lambda.zip artifacts/lambda.zip",
     "prepare": "husky install",
     "setup": "sls dynamodb install",
-    "build": "ts-node compile-service.ts",
-    "start": "npm run build -- --source-map && serverless offline start",
-    "package": "npm run build && zip lambda.zip dist/lambda.js && mkdir -p artifacts && mv lambda.zip artifacts/lambda.zip"
+    "start": "npm run build -- --source-map && SLS_DEBUG=* sls offline start",
+    "start:debug": "npm run clean && tsc && SLS_DEBUG=* sls offline start",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "serverless",
@@ -29,11 +31,12 @@
     "@aws-lambda-powertools/commons": "^1.17.0",
     "@aws-lambda-powertools/logger": "^1.17.0",
     "@aws-sdk/lib-dynamodb": "^3.490.0",
-    "@dvsa/cvs-microservice-common": "^0.5.0",
+    "@dvsa/cvs-microservice-common": "^0.8.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "reflect-metadata": "^0.2.1",
     "routing-controllers": "^0.10.4",
+    "routing-controllers-openapi": "^4.0.0",
     "serverless-http": "^3.2.0",
     "typedi": "^0.10.0"
   },
@@ -44,6 +47,7 @@
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "class-validator-jsonschema": "^5.0.0",
     "esbuild": "^0.19.11",
     "esbuild-plugin-typescript-decorators": "^0.1.0",
     "eslint": "^8.56.0",
