Feat/proxy function refactor (#13)
* Restructure files

* Restructure for functions/proxy

--- a/package.json
+++ b/package.json
@@ -2,24 +2,26 @@
   "name": "serverless-sub-routing",
   "version": "1.1.0",
   "description": "Serverless Sub Routing with DI",
-  "main": "src/index.ts",
+  "main": "src/proxy/index.ts",
   "author": "matthew2564",
   "friendlyName": "Serverless Sub Routing",
   "license": "ISC",
   "scripts": {
-    "build": "npm run clean && ts-node compile-service.ts",
+    "build": "npm run clean && ts-node build-service.ts",
     "clean": "rimraf artifacts build dist",
     "format": "prettier . --write",
     "generate-openapi-spec": "ts-node documentation/generate-openapi-spec.ts",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "package": "npm run build && mv dist/src/** dist/ && zip lambda.zip dist/index.js && mkdir -p artifacts && mv lambda.zip artifacts/lambda.zip",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "prepare": "husky install",
     "setup": "sls dynamodb install",
-    "start": "npm run build -- --source-map && SLS_DEBUG=* sls offline start",
+    "start": "npm run clean && npm run build -- --source-map && SLS_DEBUG=* sls offline start",
     "start:debug": "npm run clean && tsc && SLS_DEBUG=* sls offline start",
-    "test": "jest",
-    "test:coverage": "jest --coverage"
+    "package:functions": "mkdir -p artifacts && cd dist/functions && for dir in *; do if [ -d \"$dir\" ]; then zip -r \"../../artifacts/${dir}.zip\" \"$dir\"; fi; done",
+    "package:proxy": "mkdir -p artifacts && cd dist && if [ -d \"proxy\" ]; then zip -r \"../artifacts/proxy.zip\" \"proxy\"; fi",
+    "package": "npm run build && npm run package:proxy && npm run package:functions"
   },
   "keywords": [
     "serverless",
@@ -36,7 +38,6 @@
     "express": "^4.18.2",
     "reflect-metadata": "^0.2.1",
     "routing-controllers": "^0.10.4",
-    "routing-controllers-openapi": "^4.0.0",
     "serverless-http": "^3.2.0",
     "typedi": "^0.10.0"
   },
@@ -58,6 +59,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
     "rimraf": "^5.0.5",
+    "routing-controllers-openapi": "^4.0.0",
     "serverless": "^3.38.0",
     "serverless-dotenv-plugin": "^6.0.0",
     "serverless-dynamodb": "^0.2.47",
