--- a/.github/workflows/auto-update.yaml
+++ b/.github/workflows/auto-update.yaml
@@ -17,12 +17,12 @@ on:
         default: false
         required: false
       update-type:
-        description: 'Update Type - major (latest), minor, or patch'
+        description: 'Update Type - major, minor, or patch'
         required: true
         default: 'minor'
         type: choice
         options:
-          - latest
+          - major
           - minor
           - patch
 
@@ -54,7 +54,11 @@ jobs:
 
       - name: ➕ Use `npm-check-updates` to attempt a `${{ github.event.inputs.update-type }}` version upgrade
         run: |
-          npx --yes npm-check-updates --doctor -u --target ${{ github.event.inputs.update-type }} || exit 1
+          TARGET_VERSION=${{ github.event.inputs.update-type }}
+          if [ "$TARGET_VERSION" = "major" ]; then
+             TARGET_VERSION="latest"
+          fi
+          npx --yes npm-check-updates --doctor -u --target $TARGET_VERSION || exit 1
 
       - name: 🔄 Check for changes
         id: check_changes
@@ -71,7 +75,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           git add .
-          git commit -m "build: update ${{ github.event.inputs.update-type }} dependencies"
+          git commit -m "build: upgrading ${{ github.event.inputs.update-type }} versions of dependencies"
           git push
 
       - name: 📝 Create Pull Request
@@ -83,7 +87,8 @@ jobs:
           script: |
             const title = '[Automated] Update ${{ github.event.inputs.update-type }} dependencies';
             const body = 'This is an auto-generated PR with dependency updates and version bump performed by `npm-check-updates`.';
-            const branch = `build/${{ github.event.inputs.update-type }}-dependencies-bump-${Date.now()}`;
+            const dateInDDmmYYYY = new Date().toISOString().split('T')[0].split('-').reverse().join('-');
+            const branch = `build/${{ github.event.inputs.update-type }}-dependencies-bump-${dateInDDmmYYYY}`;
             const [owner, repo] = process.env.GITHUB_REPOSITORY.split('/');
             const base = process.env.GITHUB_REF.split('/').slice(-1)[0];
 
